# crew-ai

engineering_crew/: .env  README.md  pyproject.toml
engineering_crew/output/: app.py  audio_surveillance.py  audio_surveillance.py_design.md  test_audio_surveillance.py
engineering_crew/src/engineering_crew/: crew.py  main.py
engineering_crew/src/engineering_crew/config/: agents.yaml  tasks.yaml
